spec/e2e/operator/add_bool_string.lit
true + "s"; # error: [line 1] Runtime error: Undefined operator + for Bool and String.
